--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,13 @@
     background-color: red;
     border-color: green;
 }
+
+.login{
+    color: green;
+    text-transform: uppercase;
+}
+
+.logout{
+    color: red;
+    text-transform: lowercase;
+}
