--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,7 +176,7 @@
   <p *ngIf="usersObj.length == 0">No Users to Display</p>
 </div> -->
 
-<ul>
+<!-- <ul>
 <li *ngFor="let user of usersObj; let i = index; let usersCount = count">
   {{usersCount}} - {{i}} {{user.name}} 
   <button (click)="onDelete(user)">Delete</button></li>
@@ -187,20 +187,63 @@
 }
 
 <ul>
-@for (user of usersObj; track user; let i = $index; let usersCount = $count) {
-  <li>{{usersCount}} - {{i}} {{user.name}} <button (click)="onDelete(i)">Delete</button></li>
+@for (user of usersObj; track user; let i = $index; let usersCount = $count; let first = $first; let last = $last; let even = $even; let odd = $odd) {
+  <li>{{odd}} {{usersCount}} - {{i}} {{user.name}} <button (click)="onDelete(i)">Delete</button></li>
 }
 
 @empty {
   <p>No Users to Display - Loaded using Empty Syntax</p>
 }
-</ul>
+</ul> -->
 
 
   
 
 <!-- change detection -->
- <button (click)="addNewUser()">Add New User</button>
+ <!-- <button (click)="addNewUser()">Add New User</button> -->
+
+ <!-- NgSwitchCase -->
+  <!-- <div [ngSwitch]="userRole">
+    <p *ngSwitchCase="'Admin'">Welcome Admin</p>
+    <p *ngSwitchCase="'Member'">Welcome Member</p>
+    <p *ngSwitchCase="'Editor'">Welcome Editor</p>
+
+    <p *ngSwitchDefault>Please Login</p>
+  </div> -->
+
+<!-- <div>
+  @switch (userRole) {
+    @case ('Admin') {
+      <p>Welcome Admin</p>
+    }
+    @case ('Member') {
+      <p>Welcome Member</p>
+    }
+    @case ('Editor') {
+      <p>Welcome Editor</p>
+    }
+    @default {
+      <p>Please Login</p>
+    }
+  }
+</div> -->
+
+
+<!-- ngStyle Directive -->
+<!-- <h1 [style.color]="isLoggedIn? 'green':'red'" [style.textTransform]="isLoggedIn? 'uppercase':'lowercase'">Welcome Admin</h1>
+
+<h1 [ngStyle]="{ 
+  'color': isLoggedIn? 'green':'red', 
+  'textTransform': isLoggedIn? 'uppercase':'lowercase'
+}">Ng Style Directive</h1> -->
+
+<!-- ngClass Directive -->
+<h1 [class.login]="isLoggedIn" [class.logout]="!isLoggedIn">Class Binding</h1>
+
+<h1 [ngClass]="{ 
+  'login': isLoggedIn,
+  'logout': !isLoggedIn,
+}">Ng Class Directive</h1>
 
 
 
