--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,2 +1,10 @@
 <p>profile works!</p>
-<h2>{{pUserName}}</h2>
+<!-- <h2>{{pUserName}}</h2>
+
+<h1>{{counter}}</h1>
+<button (click)="incrementCounter()">Increment Counter</button> -->
+
+<!-- NgAftertContentInit LifeCycle Hook1 -->
+ <div>
+    <ng-content></ng-content>
+ </div>
