--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -12,3 +12,13 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima, natus, </p>
 
 </app-card> -->
+
+<!-- angular services -->
+ <h1>{{childUser | json}}</h1>
+
+ 
+<app-user>
+  
+ </app-user>
+
+ <h1>{{userService.users | json}}</h1>
